RESOLVED FIXED115505
REGRESSION (r149422): -[WKBrowsingContextController loadFileURL:restrictToFilesWithin:] broken when second argument is nil
https://bugs.webkit.org/show_bug.cgi?id=115505
Summary REGRESSION (r149422): -[WKBrowsingContextController loadFileURL:restrictToFil...
Alexey Proskuryakov
Reported 2013-05-01 22:41:25 PDT
assumeReadAccessToBaseURL takes a URL string, not a path. <rdar://problem/13787297>
Attachments
proposed fix (2.21 KB, patch)
2013-05-01 22:47 PDT, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2013-05-01 22:47:30 PDT
Created attachment 200301 [details] proposed fix
Darin Adler
Comment 2 2013-05-02 09:11:14 PDT
Comment on attachment 200301 [details] proposed fix View in context: https://bugs.webkit.org/attachment.cgi?id=200301&action=review > Source/WebKit2/UIProcess/WebPageProxy.cpp:744 > if (!resourceDirectoryURLString.isNull()) { I would put the null case first since it’s shorter, and then the non-null case. > Source/WebKit2/UIProcess/WebPageProxy.cpp:749 > + resourceDirectoryURL = KURL(ParsedURLString, "file:///"); Should be KURL(ParsedURLString, ASCIILiteral("file:///")).
Alexey Proskuryakov
Comment 3 2013-05-02 09:55:48 PDT
Note You need to log in before you can comment on or make changes to this bug.