        REGRESSION (r149422): -[WKBrowsingContextController loadFileURL:restrictToFilesWithin:]         broken when second argument is nil         https://bugs.webkit.org/show_bug.cgi?id=115505         <rdar://problem/13787297>

Reviewed by Darin Adler.

        * UIProcess/WebPageProxy.cpp: (WebKit::WebPageProxy::loadFile): Pass a URL string
        to assumeReadAccessToBaseURL, as this is what it takes.



Canonical link: https://commits.webkit.org/133960@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149488 268f45cc-cd09-0410-ab3c-d52691b4dbfc